# linkedin-discord-bot

./: .dockerignore  .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/versions/: bd8cb892aea2_ed3ab04.py
linkedin_discord_bot/: cli.py  db.py  exceptions.py  linkedin.py  models.py  scraper.py  settings.py
linkedin_discord_bot/cli/: __init__.py  bot.py  db.py  jobs.py  main.py  scraper.py  version.py
linkedin_discord_bot/cogs/commands/: utils.py
linkedin_discord_bot/core/: discord.py  linkedin.py  logging.py  settings.py
linkedin_discord_bot/discord/: __init__.py
linkedin_discord_bot/discord/cogs/commands/: job.py  query.py  utils.py
linkedin_discord_bot/scraper/: __init__.py  callbacks.py
tasks/docker/: Taskfile.yml
tests/core/: test_logging.py
