[project]
name = "linkedin-discord-bot"
version = "0.1.0"
description = "A Discord bot that posts LinkedIn job postings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "proxycurl-py[asyncio]>=0.1.0.post2",
    "py-cord>=2.6.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "typer>=0.15.2",
]

[project.scripts]
li-cli = "linkedin_discord_bot.cli:cli"
li-bot = "linkedin_discord_bot.core.discord:bot_start"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "deptry>=0.23.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
]

[tool.black]
line-length = 100

[tool.mypy]
mypy_path = "stubs"
python_version = "3.12"
exclude = "tests/.*"
strict = true
disallow_untyped_decorators = false
untyped_calls_exclude = "discord"

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 100

[tool.pylint."messages control"]
disable = ["all"]
enable = ["mixed-line-endings", "unexpected-line-ending-format"]

[tool.pytest.ini_options]
addopts = "-v --cov=linkedin_discord_bot --cov-report=term-missing --cov-fail-under=25 --cov-config=.coveragerc"
testpaths = ["tests"]
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
